test/corpus/array.txt
================
array: [1 2 3]
================
[1 2 3]
---

(source_file
  (PROGRAM
    (segment
      (term
        (array
          (openBracket)
          (segment
            (term (number))
            (segment
              (term (number))
              (segment
                (term (number))
          )))
          (closeBracket)
        )
      )
    )
  )
)

================
array: {+ - ∶}
================
{+ - ∶}
---

(source_file
  (PROGRAM
    (segment
      (term
        (array
          (openCurly)
          (segment (term (primitive (function)))
            (segment (term (primitive (function)))
              (segment (term (primitive (function))))
          ))
          (closeCurly)
        )
      )
    )
  )
)
================
array: [\n 1 \n 2 \n 3\n]
================
[
  1
  2
  3
]
---

(source_file
  (PROGRAM
    (segment
      (term
        (array
          (openBracket)
          (segment (term (number)))
          (segment (term (number)))
          (segment (term (number)))
          (closeBracket)
        )
      )
    )
  )
)
