test/corpus/multilineblock.txt
================
multiline function1: /( + + )
================
/(
  +
  +
)
---

(source_file
  (PROGRAM
    (segment
      (term
        (compound
          (modifier1)
          (inlineFunction
            (openParen)
            (segment (term (primitive (function))))
            (segment (term (primitive (function))))
            (closeParen)
          )
        )
      )
    )
  )
)

================
'$-string` takes the rest of the line
================
$ Hello
---

(source_file
  (PROGRAM
    (segment (term (multiLineString)))
  )
)

================
'$\n?` should be acceptable
================
$
---

(source_file
  (PROGRAM
    (segment (term (multiLineString)))
  )
)
