test/corpus/numerics.txt
================
fraction: 1/3
================
1/3
---

(source_file
  (PROGRAM
    (segment
      (term (number (fraction)))
    )
  )
)

================
complex: ℂ 1 2
================
ℂ 1 2
---

(source_file
  (PROGRAM
    (segment
      (term
        (primitive (function)))
      (segment
        (term (number))
        (segment (term (number))))
    )
  )
)

================
high-minus prefix: ¯1
================
¯1
---

(source_file
  (PROGRAM
    (segment (term (number))
    )
  )
)

================
high-minus as a monadic function: ¯ 1
================
¯ 1
---

(source_file
  (PROGRAM
    (segment
      (term (primitive (function)))
      (segment (term (number)))
    )
  )
)
